feat: add content and basic styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Stuart Hahn | Product Leader</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Stuart Hahn</h1>
+    <header>
+      <h1>Stuart Hahn</h1>
+      <p>
+        Exceptional Product Leader | AI Innovator | Scalable Solutions Expert
+      </p>
+    </header>
+    <section>
+      <h2>About Me</h2>
+      <p>
+        I'm Stuart Hahn, a results-driven product leader with 7+ years of
+        experience delivering impactful tools and optimizing workflows. I
+        specialize in harnessing the power of AI to solve complex problems,
+        improve efficiency, and scale operations. My approach combines customer
+        empathy, cross-functional collaboration, and data-driven
+        decision-making.
+      </p>
+      <h2>Key Achievements</h2>
+      <ul>
+        <li>
+          Partnered with <strong>Roblox</strong> to create
+          <strong>Speak_ Roblox</strong>, a tool that improved hiring outcomes
+          by <strong>18x</strong>. Among 44,000 applicants, 2,000 users
+          accounted for nearly 50% of hires.
+        </li>
+        <li>
+          Designed and launched <strong>Speak_</strong>, an AI-driven platform
+          that saves recruiters <strong>25+ hours per 1,000 resumes</strong>.
+        </li>
+        <li>
+          Scaled software engineering cohorts from 50 to 300+ participants
+          monthly, boosting engagement by 20% and increasing completion rates by
+          15%.
+        </li>
+        <li>
+          Founded and grew <strong>Smart Madden</strong>, a subscription-based
+          platform for Madden players, which was acquired by Playbook.gg.
+        </li>
+      </ul>
+      <h2>My Leadership Philosophy</h2>
+      <p>
+        Great products start with a deep understanding of customer needs and the
+        collaboration of dedicated teams. I believe in turning feedback into
+        actionable solutions, fostering innovation, and delivering results that
+        matter. Whether optimizing workflows or building AI tools that make
+        lives easier, I approach every challenge with passion and curiosity.
+      </p>
+    </section>
+    <section>
+      <h2>Interests</h2>
+      <ul>
+        <li>Beekeeping (2 thriving colonies that love Tulip Poplars)</li>
+        <li>Reading (Big fan of Cal Newport’s work)</li>
+        <li>Permaculture (Creating a food forest in my backyard)</li>
+        <li>Gaming (Champ 3 in Rocket League!)</li>
+      </ul>
+    </section>
+    <div class="contact">
+      <p>Let’s connect!</p>
+      <p>
+        <a href="mailto:stuart.a.hahn@gmail.com">stuart.a.hahn@gmail.com</a> |
+        <a href="https://linkedin.com/in/stuart-a-hahn/" target="_blank"
+          >LinkedIn</a
+        >
+      </p>
+    </div>
   </body>
 </html>
